[tool.poetry]
name = "rental"
version = "0.1.0"
description = "A REST API to keep track of items lent to friends"
authors = ["Samwel Kanda"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.1.2"
psycopg2-binary = "^2.8.6"
djangorestframework = "^3.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
